# bg-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  readme.md  start_server.sh
server/: .env.example  Dockerfile  README.MD  constants.py  handlers.py  main.py  pyproject.toml  requirements.txt  start.sh
server/app/: constants.py  models.py  serializers.py  utils.py
server/app/games/regicide/: dto.py  exceptions.py  game.py  models.py  types.py  utils.py
server/core/: caches.py  config.py  constants.py  database.py  loaders.py  types.py  utils.py
server/core/games/: base.py  engine.py  exceptions.py  game.py  serializers.py  transform.py  utils.py
server/core/games/regicide/: adapter.py  converters.py  dto.py  engine.py  exceptions.py  game.py  internal.py  models.py  serializer.py  serializers.py  utils.py
server/core/handlers/: auth.py  game.py  games.py  index.py  players.py  room.py  rooms.py  routes.py  websocket.py
server/core/resources/: auth.py  database.py  errors.py  handlers.py  models.py  utils.py
server/games/: base.py
server/games/regicide/: adapter.py  dto.py  exceptions.py  game.py  models.py  utils.py
server/handlers/: auth.py  base.py  game.py  index.py  player.py  room.py  routes.py
server/migrations/models/: 0_20231226172808_init.py  1_add_default_games.py
server/resources/: auth.py  database.py  errors.py  handlers.py  jwt.py  models.py  utils.py
server/templates/: base.html  game.html  games.html  index.html  login.html  player.html  playground.html  room.html  sign_up.html
(+120 files in other folders)
