[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
lines_between_types = 1
combine_as_imports = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true

[tool.aerich]
tortoise_orm = "core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"
